# sreality_scraper

./: .gitignore  AGENTS.md  CHANGELOG.md  COMMERCIAL_LICENSE.md  LICENSE  README.md  pyproject.toml
docs/: ANALYSIS_DATASET_CONTRACT.md  ANALYSIS_NOTEBOOK_PLAN.md  ARCHITECTURE.md  ARTIFACTS.md  ARTIFACT_REFERENCE.md  ENRICHMENT_TASK_SEQUENCE.md  MODULES.md  PRICE_SURFACE_WORKFLOW.md  README.md  ROADMAP.md  TASK_SEQUENCE.md  scraperweb.html  search.js
docs/api/: README.md  index.html
docs/scraperweb/: cities_data.html  main.html
docs/uml/: README.md
project/: README.md
project/backlog/: 2026-03-17-task-002-add-basic-test-coverage.md  2026-03-17-task-003-add-cli-runtime-options.md  2026-03-17-task-004-design-raw-data-architecture.md  2026-03-17-task-005-refactor-scraper-into-services.md  2026-03-17-task-006-add-raw-storage-abstraction.md  2026-03-17-task-007-build-typer-cli.md  2026-03-17-task-008-remove-enrichment-and-legacy-output-flow.md  2026-03-17-task-009-add-test-coverage-for-refactored-runtime.md  2026-03-17-task-010-design-simple-modular-pipeline-architecture.md  2026-03-17-task-011-create-package-boundaries-for-the-modular-pipeline.md  2026-03-17-task-012-isolate-the-raw-scraper-output-contract.md  2026-03-17-task-013-add-the-normalization-stage-and-contract.md  2026-03-17-task-014-add-the-enrichment-stage-on-top-of-normalized-data.md  2026-03-17-task-015-add-the-modeling-input-stage-and-linear-pipeline.md  2026-03-17-task-016-harden-scraper-http-runtime-behavior.md  2026-03-17-task-017-add-response-and-markup-validation-for-scraper-pages.md  2026-03-17-task-018-rework-scraper-traversal-stop-conditions.md  2026-03-18-task-019-broaden-normalized-field-coverage-from-detail-payload.md  2026-03-18-task-020-replace-title-heuristics-with-source-backed-normalization-rules.md  2026-03-18-task-021-expose-normalization-as-an-operator-workflow.md  2026-03-18-task-022-add-typed-price-building-and-energy-normalization.md  2026-03-18-task-023-add-derived-price-building-and-energy-enrichment.md  2026-03-18-task-024-design-normalized-nearby-places-contract.md  2026-03-18-task-025-implement-nearby-places-normalization.md  2026-03-18-task-026-design-normalized-accessories-contract.md  (+37 more)
scraperweb/: __init__.py  __main__.py  cities_data.py  cli.py  cli_runtime_options.py  config.py  districts.py  districts_loader.py  estate_scraper.py  main.py  progress.py  towns.py
scraperweb/application/: __init__.py  (+2 more)
scripts/: load_districts.py  load_towns.py  scrape_estates.py
tests/: conftest.py  test_cli.py  test_cli_runtime_options.py  test_config.py  test_estate_scraper_parsing.py  test_raw_storage.py
(+100 files in other folders)
