[tool.poetry]
name = "scraperweb"
version = "0.1.8"
description = "Sreality scraper and helper loaders for Czech real estate datasets."
authors = ["scraperweb contributors"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.7"
requests = "^2.32.3"
pymongo = "^4.10.1"
uvicorn = "^0.32.0"
typing-extensions = "4.12.2"
fastapi = {extras = ["standard"], version = "^0.115.5"}
bs4 = "^0.0.2"
loguru = "^0.7.2"
pandas = "^2.2.3"
geopy = "^2.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[tool.poetry.scripts]
scraperweb = "scraperweb.estate_scraper:main"
scraperweb-load-towns = "scraperweb.towns:main"
scraperweb-load-districts = "scraperweb.districts_loader:main"

[tool.pytest.ini_options]
testpaths = ["tests"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
