[tool.poetry]
name = "scraperweb"
version = "1.13.0"
description = "Raw Sreality listing scraper with filesystem and MongoDB persistence."
authors = ["scraperweb contributors"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.7"
requests = "^2.32.3"
pymongo = "^4.10.1"
uvicorn = "^0.32.0"
typing-extensions = "4.12.2"
fastapi = {extras = ["standard"], version = "^0.115.5"}
bs4 = "^0.0.2"
loguru = "^0.7.2"
typer = "^0.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[tool.poetry.scripts]
scraperweb = "scraperweb.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that call external services or exercise live runtime integration",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
